--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="homePage/styles.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
-        <img src="./images/logo.png" alt="Ky Long Logo" class="logo" />
+        <img src="homePage/images/logo.png" alt="Ky Long Logo" class="logo" />
         <div class="company-info">
           <div class="company-name">
             <a href="/" title="Công ty TNHH Đầu Tư Thương Mại Dịch Vụ Kỳ Long"
@@ -96,7 +96,7 @@
 
     <div class="hero">
       <img
-        src="./images/IndustrialStorageFacility.png"
+        src="homePage/images/IndustrialStorageFacility.png"
         alt="Industrial Facility"
       />
     </div>
@@ -136,22 +136,22 @@
         <div class="image-gallery">
           <div class="gallery-item">
             <img
-              src="./images/industrial-pipes.png"
+              src="homePage/images/industrial-pipes.png"
               alt="Hệ thống đường ống công nghiệp"
             />
           </div>
           <div class="gallery-item">
-            <img src="./images/gas-facility.png" alt="Nhà máy khí đốt" />
+            <img src="homePage/images/gas-facility.png" alt="Nhà máy khí đốt" />
           </div>
           <div class="gallery-item">
             <img
-              src="./images/valve-control.png"
+              src="homePage/images/valve-control.png"
               alt="Nhân viên kiểm soát van"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="./images/industrial-equipment.png"
+              src="homePage/images/industrial-equipment.png"
               alt="Thiết bị công nghiệp"
             />
           </div>
@@ -198,23 +198,26 @@
       <div id="team" class="tab-pane tab-content">
         <div class="image-gallery">
           <div class="gallery-item">
-            <img src="./images/engineer-team1.png" alt="Kỹ sư đang làm việc" />
+            <img
+              src="homePage/images/engineer-team1.png"
+              alt="Kỹ sư đang làm việc"
+            />
           </div>
           <div class="gallery-item">
             <img
-              src="./images/engineer-team2.png"
+              src="homePage/images/engineer-team2.png"
               alt="Đội ngũ kỹ sư tại công trường"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="./images/engineer-team3.png"
+              src="homePage/images/engineer-team3.png"
               alt="Nhóm kỹ sư họp kế hoạch"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="./images/engineer-team4.png"
+              src="homePage/images/engineer-team4.png"
               alt="Kỹ sư điều khiển thiết bị"
             />
           </div>
@@ -249,16 +252,25 @@
       <div id="technology" class="tab-pane tab-content">
         <div class="image-gallery">
           <div class="gallery-item">
-            <img src="./images/technology1.png" alt="Công nghệ xử lý khí đốt" />
+            <img
+              src="homePage/images/technology1.png"
+              alt="Công nghệ xử lý khí đốt"
+            />
           </div>
           <div class="gallery-item">
-            <img src="./images/technology2.png" alt="Hệ thống tự động hóa" />
+            <img
+              src="homePage/images/technology2.png"
+              alt="Hệ thống tự động hóa"
+            />
           </div>
           <div class="gallery-item">
-            <img src="./images/technology3.png" alt="Phòng điều khiển" />
+            <img src="homePage/images/technology3.png" alt="Phòng điều khiển" />
           </div>
           <div class="gallery-item">
-            <img src="./images/technology4.png" alt="Thiết bị giám sát" />
+            <img
+              src="homePage/images/technology4.png"
+              alt="Thiết bị giám sát"
+            />
           </div>
         </div>
 
@@ -292,16 +304,19 @@
       <div id="facilities" class="tab-pane tab-content">
         <div class="image-gallery">
           <div class="gallery-item">
-            <img src="./images/facility1.png" alt="Văn phòng công ty" />
+            <img src="homePage/images/facility1.png" alt="Văn phòng công ty" />
           </div>
           <div class="gallery-item">
-            <img src="./images/facility2.png" alt="Nhà máy sản xuất" />
+            <img src="homePage/images/facility2.png" alt="Nhà máy sản xuất" />
           </div>
           <div class="gallery-item">
-            <img src="./images/facility3.png" alt="Kho bãi" />
+            <img src="homePage/images/facility3.png" alt="Kho bãi" />
           </div>
           <div class="gallery-item">
-            <img src="./images/facility4.png" alt="Trung tâm phân phối" />
+            <img
+              src="homePage/images/facility4.png"
+              alt="Trung tâm phân phối"
+            />
           </div>
         </div>
 
@@ -507,7 +522,10 @@
             <div class="service-grid">
               <div class="service-card">
                 <div class="service-image">
-                  <img src="./images/fuel-storage.png" alt="Nhiên liệu" />
+                  <img
+                    src="homePage/images/fuel-storage.png"
+                    alt="Nhiên liệu"
+                  />
                 </div>
                 <div class="service-name">
                   <a
@@ -520,7 +538,7 @@
 
               <div class="service-card">
                 <div class="service-image">
-                  <img src="./images/manufacturing.png" alt="Chế tạo" />
+                  <img src="homePage/images/manufacturing.png" alt="Chế tạo" />
                 </div>
                 <div class="service-name">
                   <a
@@ -533,7 +551,7 @@
 
               <div class="service-card">
                 <div class="service-image">
-                  <img src="./images/transportation.png" alt="Vận tải" />
+                  <img src="homePage/images/transportation.png" alt="Vận tải" />
                 </div>
                 <div class="service-name">
                   <a href="/servicePage#van-tai" title="Dịch vụ vận tải Kỳ Long"
@@ -544,7 +562,7 @@
 
               <div class="service-card">
                 <div class="service-image">
-                  <img src="./images/equipment.png" alt="Thiết bị" />
+                  <img src="homePage/images/equipment.png" alt="Thiết bị" />
                 </div>
                 <div class="service-name">
                   <a
@@ -601,19 +619,19 @@
 
         <div class="partners-logo-container">
           <div class="partner-logo">
-            <img src="./images/tranquang-logo.png" alt="Trần Quang" />
+            <img src="homePage/images/tranquang-logo.png" alt="Trần Quang" />
           </div>
           <div class="partner-logo">
-            <img src="./images/dongtam-logo.png" alt="Đồng Tâm" />
+            <img src="homePage/images/dongtam-logo.png" alt="Đồng Tâm" />
           </div>
           <div class="partner-logo">
-            <img src="./images/richs-logo.png" alt="Rich's" />
+            <img src="homePage/images/richs-logo.png" alt="Rich's" />
           </div>
           <div class="partner-logo">
-            <img src="./images/samsung-logo.png" alt="Samsung" />
+            <img src="homePage/images/samsung-logo.png" alt="Samsung" />
           </div>
           <div class="partner-logo">
-            <img src="./images/binhan-logo.png" alt="Bình An" />
+            <img src="homePage/images/binhan-logo.png" alt="Bình An" />
           </div>
         </div>
       </div>
@@ -746,6 +764,6 @@
       </div>
     </footer>
     <!-- END OF FOOTER SECTION HTML -->
-    <script src="script.js"></script>
+    <script src="homePage/script.js"></script>
   </body>
 </html>
