change pdf modal of news page from iframe to canvas

--- a/views/newsPage/index.html
+++ b/views/newsPage/index.html
@@ -113,11 +113,8 @@
               <h2 class="news-detail-title" id="detail-title"></h2>
               <div class="news-detail-date" id="detail-date"></div>
             </div>
-            <iframe
-              id="news-detail-content"
-              class="news-detail-content"
-              src=""
-            ></iframe>
+            <!-- Replace iframe with a div to contain the canvas -->
+            <div id="news-detail-content" class="news-detail-content"></div>
           </div>
         </div>
 
