--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -587,29 +587,68 @@
           <div class="news-subtitle">Cập nhật mới nhất từ Kỳ Long</div>
         </div>
         <div class="news-grid">
-          <!-- News items will be dynamically loaded by JavaScript -->
+          <!-- Embedded news items -->
+          <div class="news-item" data-article-url="/newsPage/newsArticle1">
+            <div class="news-thumbnail">
+              <img
+                src="../homePage/thumbnails/news-thumbnail1.png"
+                alt="Tin tức 1"
+              />
+              <div class="news-date">01/03/2025</div>
+            </div>
+            <h3 class="news-item-title">
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+            </h3>
+            <div class="news-read-more">Xem chi tiết</div>
+          </div>
+
+          <div class="news-item" data-article-url="/newsPage/newsArticle2">
+            <div class="news-thumbnail">
+              <img
+                src="../homePage/thumbnails/news-thumbnail2.png"
+                alt="Tin tức 2"
+              />
+              <div class="news-date">25/02/2025</div>
+            </div>
+            <h3 class="news-item-title">
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+            </h3>
+            <div class="news-read-more">Xem chi tiết</div>
+          </div>
+
+          <div class="news-item" data-article-url="/newsPage/newsArticle3">
+            <div class="news-thumbnail">
+              <img
+                src="../homePage/thumbnails/news-thumbnail3.png"
+                alt="Tin tức 3"
+              />
+              <div class="news-date">18/02/2025</div>
+            </div>
+            <h3 class="news-item-title">
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+            </h3>
+            <div class="news-read-more">Xem chi tiết</div>
+          </div>
+
+          <div class="news-item" data-article-url="/newsPage/newsArticle4">
+            <div class="news-thumbnail">
+              <img
+                src="../homePage/thumbnails/news-thumbnail3.png"
+                alt="Tin tức 4"
+              />
+              <div class="news-date">10/02/2025</div>
+            </div>
+            <h3 class="news-item-title">
+              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
+            </h3>
+            <div class="news-read-more">Xem chi tiết</div>
+          </div>
         </div>
         <div class="news-view-all">
           <a href="/newsPage" class="view-all-button">Xem tất cả tin tức</a>
         </div>
       </div>
     </section>
-
-    <!-- PDF Modal -->
-    <div id="pdf-modal" class="pdf-modal">
-      <div class="pdf-modal-content">
-        <span class="close-modal">&times;</span>
-        <div class="pdf-container">
-          <iframe
-            id="pdf-frame"
-            src=""
-            width="100%"
-            height="100%"
-            frameborder="0"
-          ></iframe>
-        </div>
-      </div>
-    </div>
     <!-- END OF NEWS BULLETIN SECTION HTML -->
 
     <!----- PARTNERS SECTION HTML ----->
