add picture and real text to Facilities, Technology, Engineering tab of intro

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -225,20 +225,23 @@
 
         <div class="content-text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-            quis justo vel massa ultrices tincidunt ac eu libero. Donec laoreet
-            risus ac vestibulum egestas.
+            Kỳ Long tự hào là nơi quy tụ của đội ngũ kỹ sư, chuyên gia hàng đầu
+            trong lĩnh vực.
           </p>
 
           <p>
-            Etiam condimentum, orci at faucibus egestas, dolor nulla ultricies
-            dui, eu facilisis magna mi sit amet arcu. Donec at purus ac ligula
-            mollis vestibulum at in diam.
+            Với nhiều năm kinh nghiệm thực chiến trong quá trình vận hành các
+            công trình lớn nhỏ, độ ngũ nhân sự tại Kỳ Long có khả năng thiết kế,
+            triển khai và quản lý những dự án đòi hỏi tiêu chuẩn cao, đảm bảo
+            tiến độ hoàn thành nghiêm ngặt, chất lượng và an toàn.
           </p>
 
           <p>
-            Mauris vestibulum rutrum enim, nec dictum dui malesuada at. Fusce
-            pharetra ultricies nisi, vitae viverra dolor vestibulum ac.
+            Không dừng lại ở đó, đội ngũ kỹ sư tại Kỳ Long còn không ngừng cập
+            nhật những kiến thức mới nhất về công nghệ, thiết bị, nhằm tối ưu
+            hoá quá trình vận hành hệ thống, cung cấp cho khách hàng những giải
+            pháp toàn diện nhất, giúp họ tận dụng tối đa lợi ích của khí tự
+            nhiên trong hoạt động sản xuất và kinh doanh.
           </p>
 
           <div class="navigation-buttons">
@@ -276,21 +279,22 @@
 
         <div class="content-text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            aliquam feugiat tortor, vel interdum erat faucibus id. Integer
-            semper consequat justo vel aliquam.
+            Công ty Kỳ Long tự hào là một trong những đơn vị hàng đầu trong lĩnh
+            vực phân phối khí tự nhiên ứng dụng công nghệ tiên tiến trong công
+            việc vận hành và phân phối khí.
           </p>
 
           <p>
-            Nam rhoncus, nibh sit amet dictum bibendum, enim enim eleifend
-            magna, vel tempor nunc velit in magna. Nullam viverra tristique
-            tellus, non gravida tellus.
+            Chúng tôi luôn tận dụng các công nghệ hiện đại như hệ thống tái sinh
+            khí hóa học tiên tiến cho LNG, cho phép chuyển đổi LNG từ dạng rời
+            về dạng khí một cách hiệu quả và an toàn.
           </p>
 
           <p>
-            Phasellus vitae mauris non orci varius tristique. Vestibulum ante
-            ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-            curae.
+            Đối với CNG, chúng tôi sử dụng PLC điều khiển khí nén để đảm bảo quá
+            trình nén và vận hành khí được tối ưu hóa. Hệ thống giảm áp PRU được
+            hợp nhất để điều chỉnh hiệu suất phù hợp với nhu cầu, mang lại sự an
+            toàn và chất lượng dịch vụ vượt trội cho khách hàng.
           </p>
 
           <div class="navigation-buttons">
@@ -322,21 +326,22 @@
 
         <div class="content-text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-            congue vulputate nunc, vel tincidunt ligula efficitur ut. Aliquam
-            erat volutpat.
+            Kỳ Long sở hữu cơ sở vật chất hiện đại và toàn diện trong lĩnh vực
+            phân phối khí tự nhiên. Hệ thống bồn chứa LNG được thiết kế để đảm
+            bảo an toàn và hiệu quả trong quá trình lưu trữ và vận hành khí cụ.
           </p>
 
           <p>
-            Curabitur id volutpat ligula, vel iaculis elit. Ut sollicitudin
-            ipsum eu felis volutpat, vel laoreet mauris venenatis. Nulla
-            facilisi.
+            Các trạm giảm áp PRU được trang bị công nghệ tiên tiến, cho phép
+            điều chỉnh áp dụng phù hợp với nhu cầu của khách hàng. Ngoài ra, Kỳ
+            Long còn đầu tư vào hệ thống xe đầu kéo chuyên dụng đảm bảo hoạt
+            động và đáp ứng nhanh chóng nhu cầu của thị trường.
           </p>
 
           <p>
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia curae; Vestibulum ullamcorper ipsum sit amet tellus
-            tincidunt, ac vulputate lectus semper.
+            Tất cả các cơ sở vật chất đều được thiết kế và vận hành theo các
+            tiêu chuẩn quốc tế về an toàn và hiệu quả, cam kết mang lại dịch vụ
+            chất lượng cao cho khách hàng.
           </p>
 
           <div class="navigation-buttons">
