--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -595,10 +595,7 @@
           <!-- Embedded news items -->
           <div class="news-item" data-article-url="/newsPage/newsArticle1">
             <div class="news-thumbnail">
-              <img
-                src="../homePage/thumbnails/news-thumbnail1.png"
-                alt="Tin tức 1"
-              />
+              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 1" />
               <div class="news-date">01/03/2025</div>
             </div>
             <h3 class="news-item-title">
@@ -609,10 +606,7 @@
 
           <div class="news-item" data-article-url="/newsPage/newsArticle2">
             <div class="news-thumbnail">
-              <img
-                src="../homePage/thumbnails/news-thumbnail2.png"
-                alt="Tin tức 2"
-              />
+              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 2" />
               <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
@@ -623,10 +617,7 @@
 
           <div class="news-item" data-article-url="/newsPage/newsArticle3">
             <div class="news-thumbnail">
-              <img
-                src="../homePage/thumbnails/news-thumbnail3.png"
-                alt="Tin tức 3"
-              />
+              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 3" />
               <div class="news-date">18/02/2025</div>
             </div>
             <h3 class="news-item-title">
@@ -637,10 +628,7 @@
 
           <div class="news-item" data-article-url="/newsPage/newsArticle4">
             <div class="news-thumbnail">
-              <img
-                src="../homePage/thumbnails/news-thumbnail3.png"
-                alt="Tin tức 4"
-              />
+              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 4" />
               <div class="news-date">10/02/2025</div>
             </div>
             <h3 class="news-item-title">
