for home page, move most of the intro tabs images, except for about us tab, to imgur

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -199,25 +199,25 @@
         <div class="image-gallery">
           <div class="gallery-item">
             <img
-              src="homePage/images/engineer-team1.png"
+              src="https://i.imgur.com/likEmca.png"
               alt="Kỹ sư đang làm việc"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/engineer-team2.png"
+              src="https://i.imgur.com/nrlMwa9.png"
               alt="Đội ngũ kỹ sư tại công trường"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/engineer-team3.png"
+              src="https://i.imgur.com/Km2MIIP.png"
               alt="Nhóm kỹ sư họp kế hoạch"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/engineer-team4.png"
+              src="https://i.imgur.com/Z1WbUGY.png"
               alt="Kỹ sư điều khiển thiết bị"
             />
           </div>
@@ -256,22 +256,22 @@
         <div class="image-gallery">
           <div class="gallery-item">
             <img
-              src="homePage/images/technology1.png"
+              src="https://i.imgur.com/bFkvq8i.png"
               alt="Công nghệ xử lý khí đốt"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/technology2.png"
+              src="https://i.imgur.com/Mdpeav3.png"
               alt="Hệ thống tự động hóa"
             />
           </div>
           <div class="gallery-item">
-            <img src="homePage/images/technology3.png" alt="Phòng điều khiển" />
+            <img src="https://i.imgur.com/ldp8J3J.png" alt="Phòng điều khiển" />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/technology4.png"
+              src="https://i.imgur.com/DP4SBce.png"
               alt="Thiết bị giám sát"
             />
           </div>
@@ -308,17 +308,20 @@
       <div id="facilities" class="tab-pane tab-content">
         <div class="image-gallery">
           <div class="gallery-item">
-            <img src="homePage/images/facility1.png" alt="Văn phòng công ty" />
+            <img
+              src="https://i.imgur.com/lEeWQlX.png"
+              alt="Văn phòng công ty"
+            />
           </div>
           <div class="gallery-item">
-            <img src="homePage/images/facility2.png" alt="Nhà máy sản xuất" />
+            <img src="https://i.imgur.com/paifs3i.png" alt="Nhà máy sản xuất" />
           </div>
           <div class="gallery-item">
-            <img src="homePage/images/facility3.png" alt="Kho bãi" />
+            <img src="https://i.imgur.com/cr4P9t0.png" alt="Kho bãi" />
           </div>
           <div class="gallery-item">
             <img
-              src="homePage/images/facility4.png"
+              src="https://i.imgur.com/R5jhTUn.png"
               alt="Trung tâm phân phối"
             />
           </div>
