eliminate admin page and its routes and controllers, downside node modules

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="address-text">
             <div>81-83 Nguyễn Hữu Cầu,</div>
-            <div>Phường Tân Định, Quận 1, TP. Hồ Chí Minh</div>
+            <div>Phường Tân Định, Quận 1, TP.HCM</div>
           </div>
         </div>
         <div class="phone">
